# GlueForge

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Resources/manual/: GlueForge-Manual.html
Source/: ParamIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: BallisticsSmoother.h  Compressor.h  DspUtils.h  DuckShape.h  GainComputer.h  LevelDetector.h  Multiband.h  Saturator.h  SidechainFilter.h  TempoDucker.h  TempoSync.h
Source/ui/: Components.h  HelpTooltip.h  LookAndFeel.h  MultibandView.h  Presets.h  ShapeEditor.h
docs/: engineering-log.md
docs/superpowers/specs/: 2026-06-18-glueforge-compressor-design.md
installer/: GlueForge.iss
scripts/: build-manual.ps1  build.ps1  deploy.ps1  package.ps1  update.ps1  validate.ps1
tests/: CMakeLists.txt  test_dsp.cpp  test_main.cpp
